--- a/templates/table_cards_row.mustache
+++ b/templates/table_cards_row.mustache
@@ -122,7 +122,7 @@ style="max-width: 25rem;"
     data-{{key}}="{{value}}"
 {{/datafields}}
 >
-  <div class="mod-booking-view-card-image-and-body-area">
+  <div class="mod-booking-view-card-image-and-body-area mod-booking-row">
     {{#cardimage}}
       {{#value}}
         <img class="w-100 rounded-top mod-booking-view-card-image" src="{{{value}}}" {{#cardimagealt}}alt="{{.}}" title="{{.}}"{{/cardimagealt}}>
