--- a/templates/table_list_row.mustache
+++ b/templates/table_list_row.mustache
@@ -118,7 +118,7 @@
 
 <div class="card border pl-3 pr-3 pt-2 pb-0 sk-fade ml-0 mr-0 mb-2 flex-md-row align-items-center row gx-0" {{#datafields}} data-{{key}}="{{value}}" {{/datafields}}>
   <div class="content w-100">
-    <div class="row {{rowclasses}} {{rowid}}">
+    <div class="row mod-booking-row {{rowclasses}} {{rowid}}">
         <div
         {{#rightside}} class="col-md-9" {{/rightside}}
         {{^rightside}} class="col-12" {{/rightside}}
