Feature: Add setting "bookondetail" to allow booking only on details page

--- a/templates/bookingoption_description_view.mustache
+++ b/templates/bookingoption_description_view.mustache
@@ -139,7 +139,7 @@
 
 
 <div class="container-fluid">
-    <div class="row">
+    <div class="row mod-booking-row">
         <div class="col-md-7">
             <h2 class="title" >{{#titleprefix}}{{.}} - {{/titleprefix}}{{title}}</h2>
             {{#invisible}}
