--- a/templates/bookit_button.mustache
+++ b/templates/bookit_button.mustache
@@ -70,7 +70,7 @@
     {{/top}}
     {{#main}}
         {{#link}}
-            <a class="booking-button-mainarea p-1 {{class}}" role="{{role}}" href="{{link}}">
+            <a class="booking-button-mainarea p-1 {{class}}" role="{{role}}" href="{{link}}" data-action="bookondetail">
                 {{{label}}}
             </a>
         {{/link}}
