--- a/styles.css
+++ b/styles.css
@@ -459,3 +459,12 @@ if there only was one booking option. */
 #page-mod-booking-mod #fgroup_id_buttonar  input[name='cancel'] {
     box-shadow: rgba(14, 30, 37, 0.12) 0 2px 4px 0, rgba(14, 30, 37, 0.32) 0 2px 16px 0;
 }
+
+.linkbutton:not(#page-mod-booking-optionview .linkbutton) {
+    background: var(--primary);
+    border-radius: 8px;
+    color: white;
+    text-decoration: none;
+    
+}
+
