--- a/templates/bookingoption_description_event.mustache
+++ b/templates/bookingoption_description_event.mustache
@@ -58,7 +58,7 @@
         </div>
     </div>
 {{/booknowbutton}}
-<h4>{{#titleprefix}}{{.}} - {{/titleprefix}}{{title}}</h4>
+<h4>{{#titleprefix}}{{.}} - {{/titleprefix}}{{{title}}}</h4>
 {{#description}}<div class="bo_description">{{{.}}}</div>{{/description}}
 {{#location}}<div class="bo_location">{{#str}}location, mod_booking{{/str}}: {{{.}}}</div>{{/location}}
 {{#institution}}<div class="bo_institution">{{#str}}institution, mod_booking{{/str}}: {{.}}</div>{{/institution}}
