--- a/templates/bookingoption_description_prepagemodal_bookit.mustache
+++ b/templates/bookingoption_description_prepagemodal_bookit.mustache
@@ -137,18 +137,18 @@
     }
 }}
 
-<p class="m-3">{{#str}} doyouwanttobook, mod_booking, {{title}} {{/str}}</p>
+<p class="m-3">{{#str}} doyouwanttobook, mod_booking, {{{title}}} {{/str}}</p>
 <div class="bookingoption-description-prepagemodal-bookit w-100 ml-3 mr-3 mb-3 mt-1 p-2 text-justify bg-light border border-secondary rounded">
     <div class="container-fluid">
         <div class="row">
             {{#imageurl}}
             <div class="col-md-3">
-                <img class="w-100 rounded" src="{{imageurl}}" alt="{{title}}">
+                <img class="w-100 rounded" src="{{imageurl}}" alt="{{{title}}}">
             </div>
             {{/imageurl}}
             {{#imageurl}}<div class="col-md-9">{{/imageurl}}
             {{^imageurl}}<div class="col-md-12">{{/imageurl}}
-                <h2 class="title" >{{#titleprefix}}{{.}} - {{/titleprefix}}{{title}}</h2>
+                <h2 class="title" >{{#titleprefix}}{{.}} - {{/titleprefix}}{{{title}}}</h2>
                 <h6 class="h6-category">
                     {{sport}}
                 </h6>
