--- a/templates/eventslist.mustache
+++ b/templates/eventslist.mustache
@@ -31,7 +31,7 @@
 
 <p>
     <button class="btn btn-link showrecentupdates-btn" type="button" data-toggle="collapse" data-target="#showEventList" aria-expanded="false" aria-controls="showEventList">
-        <i class='{{icon}}' aria-hidden="true"></i>&nbsp;{{title}}...
+        <i class='{{icon}}' aria-hidden="true"></i>&nbsp;{{{title}}}...
     </button>
 </p>
 <div class="collapse" id="showEventList">
