--- a/templates/bookingoption_description_ical.mustache
+++ b/templates/bookingoption_description_ical.mustache
@@ -50,7 +50,7 @@
     }
 }}
 
-{{#titleprefix}}{{.}} - {{/titleprefix}}{{title}}
+{{#titleprefix}}{{.}} - {{/titleprefix}}{{{title}}}
 
 {{#dates}}
 - {{{datestring}}}
