--- a/templates/ruleslist.mustache
+++ b/templates/ruleslist.mustache
@@ -44,9 +44,16 @@
 }}
 
 <div class="booking-rules-container">
-    <div class="btn btn-success booking-rules-addnewrulebtn" data-action="edit-or-new" data-id="0" data-contextid="{{contextid}}">
-        <i class="fa fa-plus-square" aria-hidden="true"></i>&nbsp;{{#str}} addbookingrule, mod_booking {{/str}}
-    </div>
+    {{#enableaddbutton}}
+        <div class="btn btn-success booking-rules-addnewrulebtn" data-action="edit-or-new" data-id="0" data-contextid="{{contextid}}">
+            <i class="fa fa-plus-square" aria-hidden="true"></i>&nbsp;{{#str}} addbookingrule, mod_booking {{/str}}
+        </div>
+    {{/enableaddbutton}}
+    {{^enableaddbutton}}
+        <div class="alert alert-warning">
+            {{#str}} useprotoenablemorerules, mod_booking {{/str}}
+        </div>
+    {{/enableaddbutton}}
     <ul class="mt-3 list-group booking-rules-list">
         {{#rules}}
         <li class="list-group-item">
