additional fix for underscores #3 - str_replace in calls

--- a/templates/signin_downloadform.mustache
+++ b/templates/signin_downloadform.mustache
@@ -58,7 +58,7 @@
     <form data-region="booking-download-signinsheet-form" method="get" action="{{baseurl}}">
 		<div class="card-header">
 			<h5 class="card-title mb-0">
-				<i class="fa fa-list fa-fw" aria-hidden="true"></i>&nbsp;{{#str}}sign_in_sheet_configure, mod_booking{{/str}}
+				<i class="fa fa-list fa-fw" aria-hidden="true"></i>&nbsp;{{#str}}signinsheetconfigure, mod_booking{{/str}}
 			</h5>
 		</div>
 	    <div class="card-body p-y-4">
