fix for underscores - add missing string

--- a/templates/page_allteachers.mustache
+++ b/templates/page_allteachers.mustache
@@ -109,7 +109,7 @@
                     <a href="mailto:{{email}}" class="page-allteachers-email btn btn-light">
                         <div>
                             <i class="fa fa-envelope" aria-hidden="true"></i>
-                            <div>{{#str}} sendmail, mod_booking {{/str}}</div>
+                            <div>{{#str}} mail, mod_booking {{/str}}</div>
                         </div>
                     </a>
                     {{/email}}
