Bugfix: Display title prefix only once

--- a/templates/bookingoption_description_ical.mustache
+++ b/templates/bookingoption_description_ical.mustache
@@ -25,7 +25,6 @@
 
     Example context (json):
     {
-        "titleprefix" : "titleprefix",
         "location" : "location",
         "institution" : "institution",
         "address" : "address",
@@ -50,7 +49,7 @@
     }
 }}
 
-{{#titleprefix}}{{.}} - {{/titleprefix}}{{{title}}}
+{{{title}}}
 
 {{#dates}}
 - {{{datestring}}}
