--- a/templates/bookingoption_description_prepagemodal_bookit.mustache
+++ b/templates/bookingoption_description_prepagemodal_bookit.mustache
@@ -148,7 +148,7 @@
             {{/imageurl}}
             {{#imageurl}}<div class="col-md-9">{{/imageurl}}
             {{^imageurl}}<div class="col-md-12">{{/imageurl}}
-                <h2 class="title" >{{#titleprefix}}{{.}} - {{/titleprefix}}{{{title}}}</h2>
+                <h2 class="title" >{{{title}}}</h2>
                 <h6 class="h6-category">
                     {{sport}}
                 </h6>
