--- a/templates/bookingoption_description_view.mustache
+++ b/templates/bookingoption_description_view.mustache
@@ -141,7 +141,7 @@
 <div class="container-fluid">
     <div class="row mod-booking-row">
         <div class="col-md-7">
-            <h2 class="title" >{{#titleprefix}}{{.}} - {{/titleprefix}}{{{title}}}</h2>
+            <h2 class="title" >{{{title}}}</h2>
             {{#invisible}}
                 <div class="booking-option-info-invisible">{{#str}} invisibleoption, mod_booking {{/str}}</div>
             {{/invisible}}
