--- a/templates/bookingoption_description.mustache
+++ b/templates/bookingoption_description.mustache
@@ -143,7 +143,7 @@
         </div>
     </div>
 {{/booknowbutton}}
-<h4>{{#titleprefix}}{{.}} - {{/titleprefix}}{{{title}}}</h4>
+<h4>{{{title}}}</h4>
 {{#invisible}}
 <div class="booking-option-info-invisible">{{#str}} invisibleoption, mod_booking {{/str}}</div>
 {{/invisible}}
