changed linkbutton to bookinglinkbutton

--- a/styles.css
+++ b/styles.css
@@ -460,7 +460,7 @@ if there only was one booking option. */
     box-shadow: rgba(14, 30, 37, 0.12) 0 2px 4px 0, rgba(14, 30, 37, 0.32) 0 2px 16px 0;
 }
 
-.linkbutton:not(#page-mod-booking-optionview .linkbutton) {
+.bookinglinkbutton:not(#page-mod-booking-optionview .bookinglinkbutton) {
     background: var(--primary);
     border-radius: 8px;
     color: white;
