Bugfix: bookingoption_updated event for subbookings
squash

--- a/templates/subbookingslist.mustache
+++ b/templates/subbookingslist.mustache
@@ -52,14 +52,16 @@
                         data-action="delete"
                         data-id="{{id}}"
                         data-cmid="{{cmid}}"
-                        data-name="{{name}}">
+                        data-name="{{name}}"
+                        data-optionid="{{optionid}}">
                         <i class="fa fa-trash" aria-hidden="true"></i> {{#str}} delete {{/str}}
                     </div>
                     <div class="btn btn-sm btn-outline-primary bookingsubbooking-button"
                         data-action="edit"
                         data-id="{{id}}"
                         data-cmid="{{cmid}}"
-                        data-name="{{name}}">
+                        data-name="{{name}}"
+                        data-optionid="{{optionid}}">
                         <i class="fa fa-pencil" aria-hidden="true"></i> {{#str}} edit {{/str}}
                     </div>
                 </div>
