Improvement: hand over condition data to bookit button

--- a/templates/bookit_button.mustache
+++ b/templates/bookit_button.mustache
@@ -54,6 +54,7 @@
     data-componentname="mod_booking"
     data-area="{{area}}"
     data-userid="{{userid}}"
+    data-results="{{results}}"
     {{#dataaction}}data-action="{{dataaction}}"{{/dataaction}}
     {{#nojs}}data-nojs="1"{{/nojs}}>
     {{#onlist}}
