--- a/templates/bookingoption_description_event.mustache
+++ b/templates/bookingoption_description_event.mustache
@@ -25,6 +25,7 @@
 
     Example context (json):
     {
+        "title" : "My title",
         "description": "Booking option description",
         "location" : "location",
         "institution" : "institution",
