--- a/templates/bookingoption_description_mail.mustache
+++ b/templates/bookingoption_description_mail.mustache
@@ -25,6 +25,7 @@
 
     Example context (json):
     {
+        "title" : "My title",
         "location" : "location",
         "institution" : "institution",
         "address" : "address",
