--- a/templates/page_teacher.mustache
+++ b/templates/page_teacher.mustache
@@ -31,6 +31,7 @@
                 "firstname" : "Maxima",
                 "lastname" : "Yoga",
                 "description" : "description",
+                "canedit" : "1",
                 "optiontables" : [
                     {
                         "key" : [
