fix for templates/page_teacher.mustache

--- a/templates/page_teacher.mustache
+++ b/templates/page_teacher.mustache
@@ -116,12 +116,11 @@
                                 </div>
                             {{#canedit}}
                                 <div class="col-1 edit-teacher-description" data-teacherid="{{teacherid}}">
-                                    <i class="fas fa-edit" aria-label="{{#str}} edit {{/str}}"></i>
+                                    <i class="fa fa-edit" aria-label="{{#str}} edit {{/str}}"></i>
                                 </div>
                             {{/canedit}}
                         </div>
                     </div>
-                    </p>
                     {{#linktoperformedunitsreport}}
                     <a href="{{linktoperformedunitsreport}}" class="btn btn-light" target="_self">
                         <span>
@@ -129,7 +128,6 @@
                         </span>
                     </a>
                     {{/linktoperformedunitsreport}}
-
                 </div>
                 <div class="card-footer">
                     <nav>
@@ -148,7 +146,6 @@
                         <div class="tab-pane fade {{class}}" id="nav-table-{{tablename}}" role="tabpanel" aria-labelledby="nav-tab-{{tablename}}">{{{table}}}</div>
                         {{/optiontables}}
                     </div>
-
                 </div>
             {{#link}}</a>{{/link}}
         </div>
