Improvement: Add classes to old & new values in eventlist of booking option for better styling

--- a/styles.css
+++ b/styles.css
@@ -467,3 +467,6 @@ if there only was one booking option. */
     text-decoration: none;
 }
 
+#page-mod-booking-editoptions .changed-old-value {
+    color: red;
+}
