Hotfix: html strings render

--- a/templates/mobile/mobile_booking_option_details.mustache
+++ b/templates/mobile/mobile_booking_option_details.mustache
@@ -7,7 +7,7 @@
         <ion-card-content>
             <b>{{ 'plugin.mod_booking.description' | translate }}</b>: 
             <ion-text>
-              <% description %>
+              <%{ description }%>
             </ion-text>
             <br>
             <b>{{ 'plugin.mod_booking.location' | translate }}</b>: <% location %> <br>
