GH-639 MUSI-619 Bugfix: detailview of teacher working with only 2nd phone as well

--- a/templates/page_teacher.mustache
+++ b/templates/page_teacher.mustache
@@ -81,7 +81,7 @@
                                 <i class="fa fa-phone" aria-hidden="true"></i>
                                 {{.}}
                             </a>
-                        <div>
+                        </div>
                     {{/phones}}
                     {{^messagesdeactivated}}
                         {{#messagingispossible}}
