--- a/styles.css
+++ b/styles.css
@@ -514,6 +514,34 @@ if there only was one booking option. */
     max-width: 100px;
 }
 
+/* Styles for new report.php */
+#accordion-usertables .card-header {
+    background: linear-gradient(to bottom, #f0f0f0, #fff);
+    border-bottom: 0;
+}
+
+#page-mod-booking-report2 div[class^='wunderbyte_table_container_'] {
+    /* stylelint-disable-next-line declaration-no-important */
+    margin: 0 !important;
+}
+
+#page-mod-booking-report2 .pagination {
+    font-size: calc(0.9rem + 0.045vw);
+    margin-left: 20px;
+}
+
+/* Make sure that spans within this container don't break.
+We need this for teachers for example. */
+.flex-wrap-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.flex-wrap-element {
+    display: inline-block;
+    white-space: nowrap;
+}
+
 .report2-system-border {
     position: relative;
     padding: 5px 10px;
@@ -545,12 +573,10 @@ if there only was one booking option. */
     opacity: 0.6; /* Makes it appear lighter */
     cursor: not-allowed; /* Shows a not-allowed cursor */
 }
-
 .disabled-profeature a {
     color: grey; /* Also greys out the link */
     text-decoration: none; /* Optional: Remove underline if it's styled */
 }
-
 .disabled-profeature a:hover {
     color: grey; /* Ensures hover doesn’t change color */
 }
