Linting and adding missing strings

--- a/templates/enrollink.mustache
+++ b/templates/enrollink.mustache
@@ -25,9 +25,9 @@
 
      Example context (json):
     {
-        "info" : "No more seats available"
-        "error": 1
-        "courselink": ""
+        "info" : "No more seats available",
+        "error": 1,
+        "courselink": "http://root/course/view.php?id=1234",
     }
 }}
 
