Bugfix: Fix strings for selflearningcourses #713

--- a/templates/bookingoption_description_view.mustache
+++ b/templates/bookingoption_description_view.mustache
@@ -183,10 +183,10 @@
                 {{#selflearningcourse}}
                     <i class="fa fa-fw fa-clock-o" aria-hidden="true"></i>&nbsp;
                     {{^timeremaining}}
-                        {{#str}}selflearningcourse:durationinfo, mod_booking, {{duration}}{{/str}}
+                        {{#str}}selflearningcourse_durationinfo, mod_booking, {{duration}}{{/str}}
                     {{/timeremaining}}
                     {{#timeremaining}}
-                        {{#str}}selflearningcourse:timeremaininginfo, mod_booking, {{timeremaining}}{{/str}}
+                        {{#str}}selflearningcourse_timeremaininginfo, mod_booking, {{timeremaining}}{{/str}}
                     {{/timeremaining}}
                 {{/selflearningcourse}}
             {{/datesexist}}
