--- a/templates/enrollink.mustache
+++ b/templates/enrollink.mustache
@@ -27,7 +27,7 @@
     {
         "info" : "No more seats available",
         "error": 1,
-        "courselink": "http://root/course/view.php?id=1234",
+        "courselink": "http://root/course/view.php?id=1234"
     }
 }}
 
